style.css
* {
    margin: 0;
    padding: 0;
    position:relative;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;   
    font-family: Poppins;
    text-decoration: none;
}

#vanta {
    z-index: 0;
    position: fixed;
    left: 0;
    right: 0;
    top: 0;   
    width: 100%;
    height: 100%;
    object-fit: cover;
}

@media screen and (max-width: 500px) {
    #vanta {
        width: 500%;
    }
}

main {
    position:relative;
    width: 100%;
    height: 100%;
    opacity: 0;
    filter: blur(10px);
    transition: opacity 2s ease-in-out, filter 2s ease-in-out;
}

nav {
    height: 48px;
    width: 100%;
    display:flex;
    justify-content: space-between;
    align-items: center;
    margin: 0%;
    padding-top: 2px;
    padding-bottom: 2px;
    background-color: #23153cb4;
}

.navbarBrand {
    color: #FF3F81;
    font-family: Caveat;
    font-weight: 600;
    font-size: 36px;
    display: flex;
    margin-left: 30px;
    justify-content: space-between;
}

.navbarBrand:hover {
    color: #fefcfb;
}

.navbarContent {
    float: right;
    margin-right: 30px;

}

.navbarButton {
    color: #fefcfb;
    margin-right: 10px;
    margin-left: 10px;
    font-size: 1em;
    font-weight: 400;
}

.navbarButton:hover {
    color: #FF3F81;
}

.Active {
    font-weight: 600;
}

.content {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    gap: 20%;
}

.aboutContent {
    display: flex;
    flex-direction: row;
    margin-top: 30vh; 
    margin-left: 20vh; 
    margin-right: 20vh; 
    height: 15em;
    font-size:medium;
    font-weight: bold;
    border-radius: 10em;
    background-color: #443068e3;
    border: 2.5px solid ;
    color: #fefcfb; 
}

.aboutContent img {
    width: 12em;
    height: 12em;
    border-radius: 100%;
    border: 2.5px solid #fefcfb;
    justify-content: center; 
    margin: auto; 
    margin-left: 5%;
}

.aboutContent p {
    font-family: Lexend, sans-serif; 
    font-style: normal; 
    font-weight: 100; 
    font-size: medium; 
    justify-content: center; 
    justify-items: center; 
    margin: auto; 
    margin-right: 5%;
    margin-left: 5%;
}

.container {
    box-sizing: border-box;
    list-style: none;
    margin: auto;
    padding: 4em;
    max-width: 420px;
    width: auto;
    height: auto;  
}

.container > a > div.button {
    background-color: #23153C;
    border-radius: 10em;
    width: 200px;
    padding: 1em;   
    margin: 2.5em 0;
    border: 2.5px solid #fefcfb;
    color: #fefcfb;
    font-size: medium;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    gap: 0.5em;
}

.container > a > div.button:hover {
    background-color: #fefcfb;
    color: #23153C;
}

.container > a > div.button:hover > img.icon-fb {
    content: url(./img/iconFacebookDark.svg);
}

.container > a > div.button:hover > img.icon-git {
    content: url(./img/iconGithubDark.svg);
}

.container > a > div.button:hover > img.icon-ig {
    content : url(./img/iconInstagramDark.svg);
}

footer {
    display: flex;
    margin-top: auto;
    padding-bottom: 2px;
    bottom: 0px;
    height: 52px;
    width: 100%;
    justify-content: center;
    background-color: black;
}

.footerContent {
    font-size: small;
    padding-top: 6px;
    font-weight: 100%;
    color: #fefcfb;
}

